CLDR-4568 fix login button offscreen
X-SVN-Rev: 8423

--- a/tools/cldr-apps/WebContent/surveytool.css
+++ b/tools/cldr-apps/WebContent/surveytool.css
@@ -2656,3 +2656,9 @@ span.editableHere:hover {
     padding-top:  3em;
     font: italic bold x-large Georgia, "Times New Roman", Times, serif;
 }
+
+#loginlink {
+    color:  maroon;
+    font-size: large;
+    font-weight: bold;
+}
